cros: Remove touchable flag from context_menu_matcher.cc

This feature is enabled by default, so remove the flag.

This feature was accidentally breaking menu separators on
other platforms, so re-enable them on !OS_CHROMEOS.

Bug: 904220
Change-Id: Ief676d4fabdbe800214b5dd441a7fbfb966398b9
Reviewed-on: https://chromium-review.googlesource.com/c/1364066
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#614232}(cherry picked from commit 61f33787dd2d5f9aead6e405ffd5bfe1b1cb3e58 [formerly 1ee2d56d1d898cbda771ca8e5a1d790ed76d684f])
Reviewed-on: https://chromium-review.googlesource.com/c/1368277
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#144}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 342583349feb5ef68fd1fcfc95dcdac19fc65531